fix: 버튼의 z-index 수정

--- a/src/components/Libraries.module.css
+++ b/src/components/Libraries.module.css
@@ -36,6 +36,8 @@
 
 .reset button {
   opacity: 1;
+  color: black;
+  z-index: 999;
 }
 
 .libList::-webkit-scrollbar {
